ClassDiagram tests refactored